--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="play_game_button">Play Game!</string>
     <string name="options_button">Options</string>
     <string name="help_button">Help</string>
+    <string name="erase_times_played_button">Erase Times Played</string>
+    <string name="board_size">Board Size</string>
+    <string name="settings">Settings</string>
+    <string name="help_title">Help</string>
+    <string name="mines"># Mines</string>
 </resources>
