--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="settings">Settings</string>
     <string name="help_title">Help</string>
     <string name="mines"># Mines</string>
+    <string name="winning_message">Congratulations!!!\n You found all the zombies with %d scans</string>
 </resources>
