--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="help_title">Help</string>
     <string name="mines"># Mines</string>
     <string name="winning_message">Congratulations!!!\n You found all the zombies with %d scans</string>
+    <string name="game_activity_scan_count">%d scans used</string>
+    <string name="game_activity_mine_count">%d of %d zombies found.</string>
 </resources>
