--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="settings">Settings</string>
     <string name="help_title">Help</string>
     <string name="mines"># Mines</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="times_played">Times Played:</string>
+    <string name="times_played_value">-</string>
 </resources>
