--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="winning_message">Congratulations!!!\n You found all the zombies with %d scans</string>
     <string name="game_activity_scan_count">%d scans used</string>
     <string name="game_activity_mine_count">%d of %d zombies found.</string>
+    <string name="authors">By:\nDivya Soneji\nSagardeep Singh Hunjan</string>
 </resources>
