--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="main_menu_header">Main Menu</string>
-    <string name="play_game_button">Play Game!</string>
+    <string name="play_game_button">New Game!</string>
     <string name="options_button">Options</string>
     <string name="help_button">Help</string>
     <string name="welcome_activity_skip_txt">Skip</string>
@@ -26,4 +26,5 @@
     <string name="winning_message">Congratulations!!!\n You found all the zombies with %d scans</string>
     <string name="game_activity_scan_count">%d scans used</string>
     <string name="game_activity_mine_count">%d of %d zombies found.</string>
+    <string name="continue_game">Continue Game</string>
 </resources>
