--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="help_button">Help</string>
     <string name="welcome_activity_skip_txt">Skip</string>
     <string name="welcome_activity_message">Welcome\nto\nZombie Seeker</string>
-    <string name="erase_times_played_button">Erase Times Played</string>
+    <string name="game_count_text">Game #%d</string>
+    <string name="erase_times_played_button">Erase Times Played For Selected Config</string>
     <string name="board_size">Board Size</string>
     <string name="settings">Settings</string>
     <string name="help_title">Help</string>
